manifests/ingress-16.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "kubernetesfourth-e1d6"
    labels:
        app: "kubernetesfourth-e1d6"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: kubernetesfourth925e-kubernetesfourth-e1d6.8da41d97eba94af891fb.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "kubernetesfourth-e1d6"
                servicePort: 80
